--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^6.2.9",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
+    "redis": "^3.1.2",
     "shortid": "^2.2.16"
   }
 }
